--- a/main.css
+++ b/main.css
@@ -12,13 +12,13 @@ body {
     background-color: #0B0C10;
 }
 
-nav,
 footer {
     padding: 1% 0;
     background-color: #1F2833;
 }
 
 nav {
+    background-color: #1F2833;
     position: fixed;
     top: 0;
     left: 0;
