updated hamburger to display now

--- a/main.css
+++ b/main.css
@@ -1,15 +1,17 @@
 * {
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
     font-family: "Open Sans",
         sans-serif;
     font-size: 20px;
-    color: #C5C6C7;
+    color: mintcream;
     text-align: center;
     line-height: 1.5;
     background-color: #0B0C10;
+    
 }
 
 footer {
@@ -23,39 +25,22 @@ nav {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    height: 60px;
+    z-index: 1;
 }
 
 .navName {
     color: rgb(255, 188, 5);
-    font-size: 2.2vh;
-    float: left;
-    padding-left: 2vh;
-    vertical-align: middle;
+    font-size: 0px;
+    display: flex;
+    left: 0;
+    top: 0;
+    padding-left: 5px;
+    padding-top: 5px;
 }
-
-#hamburger {
-    vertical-align: middle;
-    float: right;
-    margin: 1vh;
-}
-
-#hamburger:hover {
-    cursor: pointer;
-}
-
-#hamburger span {
-    display: block;
-    width: 3vh;
-    height: 0.4vh;
-    background-color: #66FCF1;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-
 
 header {
-    padding-top: 20%;
+    padding-top: 14%;
     padding-bottom: 8%;
 }
 
@@ -67,7 +52,7 @@ section {
 }
 
 section:nth-child(even) {
-    color: #C5C6C7;
+    color: mintcream;
     background-color: #45A29E;
 }
 
@@ -80,14 +65,27 @@ section:nth-child(even) {
     padding-right: 1vh;
 }
 
-.headerImg {
-    margin-bottom: -2vh;
-    width: 20%;
+.nameHeader {
+    color: rgb(255, 188, 5);
+    font-size: 4vh;
+    letter-spacing: 0.2vh;
+    text-decoration: underline;
 }
 
-.nameHeader {
-    font-size: 2.5vh;
-    letter-spacing: 0.2vh;
+#headerStatement {
+    margin-top: -2vh;
+    display: flex;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#inovating {
+    font-size: 3vh;
+}
+
+#headerh2 {
+    font-size: 2vh;
 }
 
 .nameSpan {
@@ -95,33 +93,18 @@ section:nth-child(even) {
 }
 
 #nameSpanSymbols {
-    color: #C5C6C7;
+    color: mintcream;
 }
 
 .jobTitle {
     font-size: 2.1vh;
 }
 
-/*
------------------NAV-----------------
-*/
-
-.navBar {
-    list-style-type: none;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: flex-end;
-
-}
-
-.navList {
-    margin-right: 1vh;
-    font-size: 1.5vh;
-}
-
-.navList:hover {
-    cursor: pointer;
-    color: blue;
+#title {
+    border: solid 2px white;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*
@@ -145,11 +128,10 @@ section:nth-child(even) {
 
 .skills {
     display: flex;
-    width: 90%;
     flex-direction: row;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
+    margin-left: -5vh;
 }
 
 .skillsList {
@@ -217,6 +199,27 @@ section:nth-child(even) {
     border-radius: 5px;
     padding: 0.5vh;
     border: none;
+}
+
+.skillSetUsed {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+}
+
+#skillsUsed {
+    padding-top: 1.5vh;
+    padding-left: 1vh;
+    padding-right: 1vh;
+}
+
+.projects p {
+    margin-right: auto;
+    margin-left: auto;
+    width: 90%;
+    font-size: 1.8vh;
+    margin-top: 1vh;
 }
 
 @media screen and (min-width: 768.1px){
