fixed heading, projects, and skills for desktop

--- a/hamburger.css
+++ b/hamburger.css
@@ -148,3 +148,13 @@
   .menu-wrap .menu > div > div > ul > li > a:hover {
     color: #66FCF1;
   }
+
+  .desktopNav {
+      display: none;
+  }
+
+  @media screen and (min-width: 768.1px){
+      .menu-wrap {
+          display: none;
+      }
+  }
