--- a/main.css
+++ b/main.css
@@ -174,7 +174,7 @@ section:nth-child(even) {
 */
 
 .projects {
-    width: 80%;
+    width: 90%;
     display: block;
     flex-direction: column;
     margin-left: auto;
@@ -184,6 +184,7 @@ section:nth-child(even) {
 .projectImg {
     width: 80%;
     border-radius: 10px;
+    border: solid 2px white;
 }
 
 #live,
@@ -193,7 +194,7 @@ section:nth-child(even) {
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
-    background-color: gold;
+    background-color: rgb(255, 188, 5);
     color: #1F2833;
     width: 10vh;
     border-radius: 5px;
@@ -212,58 +213,13 @@ section:nth-child(even) {
     padding-top: 1.5vh;
     padding-left: 1vh;
     padding-right: 1vh;
+    color: #1F2833;
+    font-style: italic;
 }
 
 .projects p {
     margin-right: auto;
     margin-left: auto;
     width: 90%;
-    font-size: 1.8vh;
     margin-top: 1vh;
-}
-
-@media screen and (min-width: 768.1px){
-    .project {
-        position: relative;
-    }
-
-    .project:hover {
-        cursor: pointer;
-    }
-    
-    .project:hover .projectImg{
-        opacity: 0.3;
-        background-color: rgb(31, 40, 51)
-    }
-    
-    .project:hover .middle{
-        cursor: pointer;
-        opacity: 1;
-    }
-    
-    .projects h3 {
-        text-decoration: underline;
-    }
-    
-    .projectImg {
-        width: 80%;
-        border-radius: 10px;
-        backface-visibility: hidden;
-        transition: 0.5s ease;
-    }
-    
-    .middle {
-        cursor: pointer;
-        opacity: 0;
-        position: absolute;
-        top: 57%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        text-align: center;
-    }
-
-    #live:hover, #repo:hover {
-        cursor: pointer;
-    }
 }
