--- a/main.css
+++ b/main.css
@@ -187,6 +187,10 @@ section:nth-child(even) {
     border: solid 2px white;
 }
 
+.middleDesktop {
+    display: none;
+}
+
 #live,
 #repo {
     margin-bottom: 5vh;
@@ -196,10 +200,24 @@ section:nth-child(even) {
     display: inline-block;
     background-color: rgb(255, 188, 5);
     color: #1F2833;
-    width: 10vh;
+    width: 100px;
+    height: 50px;
     border-radius: 5px;
     padding: 0.5vh;
     border: none;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+
+#live a, #repo a {
+    color: white;
+    text-decoration: none;
+}
+
+#live a:visited, #repo a:visited {
+    color: white;
+    text-decoration: none;
 }
 
 .skillSetUsed {
