--- a/desktop.css
+++ b/desktop.css
@@ -63,6 +63,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        z-index: 2;
         position: absolute;
         cursor: pointer;
         opacity: 0;
