--- a/notActiveHamburger.css
+++ b/notActiveHamburger.css
@@ -66,38 +66,6 @@
     top: 10px;
   }
   
-  /* Toggler Animation */
-  .menu-wrap .toggler:checked + .hamburger > div {
-    transform: rotate(135deg);
-  }
-  
-  /* Turns Lines Into X */
-  .menu-wrap .toggler:checked + .hamburger > div:before,
-  .menu-wrap .toggler:checked + .hamburger > div:after {
-    top: 0;
-    transform: rotate(90deg);
-  }
-  
-  /* Rotate On Hover When Checked */
-  .menu-wrap .toggler:checked:hover + .hamburger > div {
-    transform: rotate(225deg);
-  }
-  
-  /* Show Menu */
-  .menu-wrap .toggler:checked ~ .menu {
-    visibility: visible;
-  }
-  
-  .menu-wrap .toggler:checked ~ .menu > div {
-    transform: scale(1);
-    transition-duration: var(--menu-speed);
-  }
-  
-  .menu-wrap .toggler:checked ~ .menu > div > div {
-    opacity: 1;
-    transition:  opacity 0.4s ease 0.4s;
-  }
-  
   .menu-wrap .menu {
     position: fixed;
     top: 0;
@@ -106,9 +74,13 @@
     height: 100%;
     visibility: hidden;
     overflow: hidden;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
+  }
+
+  .visible {
+    display: none;
   }
   
   .menu-wrap .menu > div {
@@ -151,6 +123,10 @@
 
   .desktopNav {
       display: none;
+  }
+
+  .invis {
+      display: flex !important;
   }
 
   @media screen and (min-width: 768.1px){
