fixed some css and no more html errors

--- a/desktop.css
+++ b/desktop.css
@@ -86,15 +86,12 @@
         margin-right: 10px;
     }
 
-    .carImg {
-        width: 100%;
-        height: auto;
-        border: solid 2px white;
-    }
-
     .projectImg {
         backface-visibility: hidden;
         transition: 0.5s ease;
+        width: 100%;
+        height: auto;
+        border: solid 2px white;
     }
 
     .projects {
@@ -147,23 +144,16 @@
 
 @media screen and (min-width: 768.1px) {
 
-    .skills {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-left: 0;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
     .skillsList {
+        display: inline-block;
         margin-top: 5vh;
+        padding-right: 65px;
+        padding-left: 65px;
     }
 
     #jqueryIcon {
         padding-top: 1px;
-        height: 52px;
+        height: 50px;
     }
 
 
@@ -181,19 +171,18 @@
 
 @media screen and (min-width: 768.1px) {
     #email {
-        margin-top: 2rem;
+        margin-top: 1rem;
         letter-spacing: 0.1rem;
     }
 
     .contactIcon {
-        margin-top: 3rem;
+        margin-top: 1rem;
         width: 10%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         margin-left: auto;
         margin-right: auto;
-        transform: translateX(-15px);
     }
 
 
@@ -203,6 +192,6 @@
 
 @media screen and (min-width: 768.1px) {
     footer {
-        margin-top: -5.5vh;
+        letter-spacing: 0.1em;
     }
 }
