--- a/desktop.css
+++ b/desktop.css
@@ -91,7 +91,7 @@
         transition: 0.5s ease;
         width: 100%;
         height: auto;
-        border: solid 2px white;
+        border: none;
     }
 
     .projects {
